bk_ida/gccida/c3/cpp_ideq
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_ideq/src/cpplex.c:563:22: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
int  cpp_ideq( const cpp_token_0 *token, const char *string) 
                     ^~~~~~~~~~~
                     cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_ideq/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_ideq/src/cpplex.c:566:4: error: use of undeclared identifier 'QDefaultAnimationDriver'
&& QDefaultAnimationDriver::QDefaultAnimationDriver( token->val.node->ident.str, ( const U_CHAR *)string) == 0; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cpp_ideq/src/obj/cpplex.o] Error 1
